--- a/lib/ios.pm.in
+++ b/lib/ios.pm.in
@@ -547,7 +547,7 @@ sub ShowLicense {
 
 	# filter the BS from license broker
 	next if (/(renewal attempt|communication attempt):/i);
-	next if (/period used:/i);
+	next if (/(period used:|requested time:)/i);		# show lic feature
 	if (/(^\s*period left:\s*)\d+/i) {
 	    ProcessHistory("COMMENTS","keysort","LICENSE","! $1<limited>\n");
 	    next;
