--- a/rancid/bin/flogin.in
+++ b/rancid/bin/flogin.in
@@ -263,6 +263,7 @@ proc run_commands { prompt command } {
     for {set i 0} {$i < $num_commands} { incr i} {
 	send -h -- "[subst -nocommands [lindex $commands $i]]\r"
 	expect {
+	    -re " *\b+"			{ exp_continue }
 	    -re "^\[^\n\r]*$prompt."	{ exp_continue }
 	    -re "^\[^\n\r *]*$prompt"	{}
 	    -re "\[\n\r]"		{ exp_continue }
