ciscowlc.pm: some older code fails to echo <CR> after logout - Bill Fenner

--- a/lib/ciscowlc.pm.in
+++ b/lib/ciscowlc.pm.in
@@ -43,7 +43,7 @@ sub inloop {
 
 TOP: while(<$INPUT>) {
 	tr/\015//d;
-	if (/^.*logout$/)  {
+	if (/^.*logout(Connection.*closed.)?$/)  {
 	    $clean_run = 1;
 	    last;
 	}
