--- a/rancid/lib/edgerouter.pm.in
+++ b/rancid/lib/edgerouter.pm.in
@@ -29,7 +29,7 @@ sub import {
 # post-open(collection file) initialization
 sub init {
     # add content lines and separators
-    ProcessHistory("","","","!RANCID-CONTENT-TYPE: $devtype\n!\n");
+    ProcessHistory("","","","#RANCID-CONTENT-TYPE: $devtype\n#\n");
 
     0;
 }
@@ -96,9 +96,9 @@ sub ShowVersion {
 
 	next if (/^(uptime|copyright):/i);
 
-	ProcessHistory("VERSION","","","!$_");
+	ProcessHistory("VERSION","","","#$_");
     }
-    ProcessHistory("VERSION","","","!\n");
+    ProcessHistory("VERSION","","","#\n");
     return(0);
 }
 
@@ -114,9 +114,9 @@ sub ShowHardware {
 	next if (/^\s+\^$/);
         return(1) if (/invalid (input|command) detected/i);
 
-	ProcessHistory("HARDWARE","","","!$_");
+	ProcessHistory("HARDWARE","","","#$_");
     }
-    ProcessHistory("HARDWARE","","","!\n");
+    ProcessHistory("HARDWARE","","","#\n");
     return(0);
 }
 
@@ -132,9 +132,9 @@ sub ShowOffload {
         return(1) if (/invalid (input|command) detected/i);
 	next if (/^\s*$/);
 
-	ProcessHistory("OFFLOAD","","","!$_");
+	ProcessHistory("OFFLOAD","","","#$_");
     }
-    ProcessHistory("","","","!\n");
+    ProcessHistory("","","","#\n");
     return;
 }
 
@@ -147,6 +147,8 @@ sub WriteTerm {
     # reset our end marker, if WriteTerm is called multiple times, eg: bird vers
     $found_end = 0;
 
+    ProcessHistory("CMD","","","# $_");
+
     while (<$INPUT>) {
 	tr/\015//d;
 	next if (/^\s+\^$/);
@@ -154,65 +156,73 @@ sub WriteTerm {
 	return(0) if ($found_end);		# Only do this routine once
 	last if (/^$prompt/);
 
-	next if (/^\s*$/);
 	$linecnt++;
 
-	/^!current configuration\s*:/i && next;
-	/^!system (description|software|up\s?time)/i && next;
-	/^!current sntp synch/i && next;
-	/^$/ && next;						# blank lines
+	/^\s*$/ && next;					# blank lines
 
-	/^ length /		&& next; # kill length on serial lines
-	/^ width /		&& next; # kill width on serial lines
 	# filter out any RCS/CVS tags to avoid confusing local CVS storage
 	s/\$(Revision|Id):/ $1:/;
 
-	# order access-lists
-	/^access-list\s+(\d\d?)\s+(\S+)\s+([a-zA-Z]\S+)/ &&
-	    ProcessHistory("ACL $1 $2","$aclsort","-1","$_") && next;
-	/^access-list\s+(\d\d?)\s+(\S+)\s+(\S+)/ &&
-	    ProcessHistory("ACL $1 $2","$aclsort","$3","$_") && next;
-	# order extended access-lists
-	/^access-list\s+(\d\d\d)\s+(\S+)\s+ip\s+host\s+(\S+)/ &&
-	    ProcessHistory("EACL $1 $2","$aclsort","$3","$_") && next;
-	/^access-list\s+(\d\d\d)\s+(\S+)\s+ip\s+(\d\S+)/ &&
-	    ProcessHistory("EACL $1 $2","$aclsort","$3","$_") && next;
-	/^access-list\s+(\d\d\d)\s+(\S+)\s+ip\s+any/ &&
-	    ProcessHistory("EACL $1 $2","$aclsort","0.0.0.0","$_") && next;
-	# oreder ip routes
-	/^ip route\s+(\S+)\s+/ &&
-	    ProcessHistory("ROUTE","ipsort","$1","$_") && next;
-	# order/prune snmp-server host/community statements
-	# snmp-server host ip.add.r "public"
-	# snmp-server host ip.add.r informs "public"
-	# snmp-server host ip.add.r informs retries 1 "public"
-	if (/^(snmp-server host )(\d+\.\d+\.\d+\.\d+ ([^"]*)?)/) {
+	## order access-lists
+	#/^access-list\s+(\d\d?)\s+(\S+)\s+([a-zA-Z]\S+)/ &&
+	#    ProcessHistory("ACL $1 $2","$aclsort","-1","$_") && next;
+	#/^access-list\s+(\d\d?)\s+(\S+)\s+(\S+)/ &&
+	#    ProcessHistory("ACL $1 $2","$aclsort","$3","$_") && next;
+	## order extended access-lists
+	#/^access-list\s+(\d\d\d)\s+(\S+)\s+ip\s+host\s+(\S+)/ &&
+	#    ProcessHistory("EACL $1 $2","$aclsort","$3","$_") && next;
+	#/^access-list\s+(\d\d\d)\s+(\S+)\s+ip\s+(\d\S+)/ &&
+	#    ProcessHistory("EACL $1 $2","$aclsort","$3","$_") && next;
+	#/^access-list\s+(\d\d\d)\s+(\S+)\s+ip\s+any/ &&
+	#    ProcessHistory("EACL $1 $2","$aclsort","0.0.0.0","$_") && next;
+	## oreder ip routes
+	#/^ip route\s+(\S+)\s+/ &&
+	#    ProcessHistory("ROUTE","ipsort","$1","$_") && next;
+	## order/prune snmp-server host/community statements
+	## snmp-server host ip.add.r "public"
+	## snmp-server host ip.add.r informs "public"
+	## snmp-server host ip.add.r informs retries 1 "public"
+	#if (/^(snmp-server host )(\d+\.\d+\.\d+\.\d+ ([^"]*)?)/) {
+	#    if ($filter_commstr) {
+	#	ProcessHistory("SNMPSERVERHOST","ipsort","$2","#$1$2<removed>\n") && next;
+	#    } else {
+	#	ProcessHistory("SNMPSERVERHOST","ipsort","$2","$_") && next;
+	#    }
+	#}
+	if (/^(\s*community)\s+(\S+)/) {
 	    if ($filter_commstr) {
-		ProcessHistory("SNMPSERVERHOST","ipsort","$2","!$1$2<removed>\n") && next;
-	    } else {
-		ProcessHistory("SNMPSERVERHOST","ipsort","$2","$_") && next;
-	    }
-	}
-	if (/^(snmp-server community )(\S+)/) {
-	    if ($filter_commstr) {
-		ProcessHistory("SNMPSERVERCOMM","keysort","$_","!$1<removed>$'") && next;
+		ProcessHistory("SNMPSERVERCOMM","keysort","$_","#$1 <removed>$'") && next;
 	    } else {
 		ProcessHistory("SNMPSERVERCOMM","keysort","$_","$_") && next;
 	    }
 	}
-	# filter tacacs key statements
-	if (/^(tacacs-server key )/ && $filter_pwds >= 1) {
-	    ProcessHistory("","","","! $1<removed>\n");
+	## filter tacacs key statements
+	#if (/^(tacacs-server key )/ && $filter_pwds >= 1) {
+	#    ProcessHistory("","","","# $1<removed>\n");
+	#    next;
+	#}
+
+	# filter ssh public keys
+	if (/^(\s*key) \S+\s*$/ && $filter_pwds >= 2) {
+	    ProcessHistory("","","","#$1 <removed>\n");
 	    next;
 	}
-	# filter other keys server statements
-	if (/^(key )/ && $filter_pwds >= 1) {
-	    ProcessHistory("","","","! $1<removed>\n");
+	# filter user plaintext password
+	if (/^(\s*plaintext-password)\s+\S+$/ &&
+	    $filter_pwds >= 1) {
+	    ProcessHistory("","","","#$1 <removed>\n");
 	    next;
 	}
-	# filter user password
-	if (/^(username \S+ password) \S+ (level .*)$/ && $filter_pwds >= 2) {
-	    ProcessHistory("","","","!$1 <removed> $2\n");
+	# filter user encrypted password
+	if (/^(\s*encrypted-password)\s+\S+$/ &&
+	    $filter_pwds >= 2) {
+	    ProcessHistory("","","","#$1 <removed>\n");
+	    next;
+	}
+	# filter protocol (bgp, etc) password
+	if (/^(\s*password)\s+\S+$/ &&
+	    $filter_pwds >= 1) {
+	    ProcessHistory("","","","#$1 <removed>\n");
 	    next;
 	}
 
