The login banner/motd has a # in it, typical of a unix-like login; so, avoid recognizing that as the prompt by making sure that it is not preceeded by a space.
admin@test.example.com's password: 
Linux ubnt 3.10.20-UBNT #1 SMP Fri Jan 29 20:11:31 PST 2016 mips64

--- a/bin/ulogin.in
+++ b/bin/ulogin.in
@@ -329,7 +329,7 @@ foreach router [lrange $argv $i end] {
     # Default prompt.
     set prompt [join [find prompt $router] ""]
     if { [llength $prompt] == 0 } {
-        set prompt "\[$#] ?"
+        set prompt "\[^ ]\[$#] ?"
     }
 
     # look for autoenable option in .cloginrc & cmd-line
