--- a/rancid/lib/ciscowlc.pm.in
+++ b/rancid/lib/ciscowlc.pm.in
@@ -151,6 +151,7 @@ sub ShowSysinfo {
 	if (/^System Up Time/) { $skipprocess = 1; }
 	if (/^fan status/i) { $skipprocess = 1; }
 	if (/^Number of Active Clients/) { $skipprocess = 1; }
+	if (/^OUI Classification Failure Count/) { $skipprocess = 1; }
 	if (/^(internal|external) temperature/i) { $skipprocess=1; }
 	if (/rpm$/) { $skipprocess = 1; }
 
