ciscowlc.pm: filter OUI classification failures - Reuben Farrelly
"There is also this:
 
  ! State of 802.11b Network......................... Enabled
  ! State of 802.11a Network......................... Enabled
  ! Number of WLANs.................................. 5
- ! OUI Classification Failure Count................. 86
+ ! OUI Classification Failure Count................. 88
  ! Burned-in MAC Address............................ FC:99:47:1B:50:00
  ! Maximum number of APs supported.................. 75
  ! System Nas-Id.................................... wlc.reub.net

Which of course increments all the time"

--- a/lib/ciscowlc.pm.in
+++ b/lib/ciscowlc.pm.in
@@ -151,6 +151,7 @@ sub ShowSysinfo {
 	if (/^System Up Time/) { $skipprocess = 1; }
 	if (/^fan status/i) { $skipprocess = 1; }
 	if (/^Number of Active Clients/) { $skipprocess = 1; }
+	if (/^OUI Classification Failure Count/) { $skipprocess = 1; }
 	if (/^(internal|external) temperature/i) { $skipprocess=1; }
 	if (/rpm$/) { $skipprocess = 1; }
 
