--- a/bin/xlogin.in
+++ b/bin/xlogin.in
@@ -55,13 +55,16 @@ proc login { router user userpswd passwd enapasswd cmethod cyphertype identfile 
 	    if {"$port" != ""} {
 		set cmd "$cmd -p $port"
 	    }
+	    if {"$cyphertype" != ""} {
+		set cmd "$cmd -c $cyphertype"
+	    }
 	    if {"$identfile" != ""} {
 		set cmd "$cmd -i $identfile"
 	    }
 	    if { $do_command || $do_script } {
-		set retval [catch {eval spawn [split "$cmd -c $cyphertype -x -l $user $router" { }]} reason]
+		set retval [catch {eval spawn [split "$cmd -x -l $user $router" { }]} reason]
 	    } else {
-		set retval [catch {eval spawn [split "$cmd -c $cyphertype -x -l $user $router" { }]} reason]
+		set retval [catch {eval spawn [split "$cmd -x -l $user $router" { }]} reason]
 	    }
 	    if { $retval } {
 		send_user "\nError: $cmd failed: $reason\n"
@@ -607,7 +610,6 @@ foreach router [lrange $argv $i end] {
         set cyphertype $cypher
     } else {
         set cyphertype [find cyphertype $router]
-        if { "$cyphertype" == "" } { set cyphertype "3des" }
     }
 
     # Figure out connection method
