--- a/rancid/lib/iosxr.pm.in
+++ b/rancid/lib/iosxr.pm.in
@@ -446,7 +446,14 @@ sub ShowInstallActive {
 	return(1) if (/^(-+\^|syntax error: unknown argument)$/i);	# NCS
 	return(-1) if (/command authorization failed/i);
 
-	next if (/fpd upgrade has ended/i);	# useless message
+	# FPD upgrade in progress on some hardware, reload/configuration change
+	# on those is not recommended as it might cause HW programming failure
+	# and result in RMA of the hardware.
+	# FPD upgrade has ended.
+	next if (/fpd upgrade has ended/i ||
+		 /fpd upgrade in progress /i ||
+		 /might cause hw programming failure/i ||
+		 /result in rma of the hardware/i);	# useless FPD messages
 
 	ProcessHistory("COMMENTS","keysort","F5","!Image: $_") && next;
     }
