--- a/rancid/lib/ios.pm.in
+++ b/rancid/lib/ios.pm.in
@@ -548,7 +548,7 @@ sub ShowLicense {
 	# filter the BS from license broker
 	next if (/(renewal attempt|communication attempt):/i);
 	next if (/(period used:|requested time:)/i);		# show lic feature
-	if (/(^\s*period left:\s*)\d+/i) {
+	if (/(^\s*(evaluation )?period (left|remaining):\s*)\d+/i) {
 	    ProcessHistory("COMMENTS","keysort","LICENSE","! $1<limited>\n");
 	    next;
 	}
