--- a/rancid/lib/acos.pm.in
+++ b/rancid/lib/acos.pm.in
@@ -147,6 +147,8 @@ sub ShowRunningConfig {
     while (<$INPUT>) {
 	tr/\015//d;
 	next if /^\s*$/;
+	next if /^\s*^$/;				# cli cmd error marker
+	return(1) if (/% unrecognized command/i);	# cli cmd error
 	last if (/^$prompt/);
 
 	# skip consecutive comment lines
@@ -158,7 +160,7 @@ sub ShowRunningConfig {
 	}
 	$comment = 0;
 
-        next if (/^!Configuration last/);
+        next if (/^!(current configuration:|configuration last)/i);
         next if (/^vcs config-info/);
         ProcessHistory("CONFIG","","","$_");
         if ((/^(.* password encrypted )\S+(.*)/ ||
