rancid.types.conf, iosshtech.pm: Add device type ciscoshtech for example purposes

--- a/etc/rancid.types.conf
+++ b/etc/rancid.types.conf
@@ -35,3 +35,76 @@ jlocal;command;junos::ShowConfiguration;show configuration | display set
 # save copies in rancid of configs from /tftpboot
 tftpcopy;script;rtftpcopy
 #
+# Like type cisco, but uses show tech instead of show running-config, which
+# does not display passwords.  This is a good example of using two modules
+# together to augment the base module.
+ciscoshtech;script;rancid -t ciscoshtech
+ciscoshtech;login;clogin
+ciscoshtech;module;ios
+ciscoshtech;module;iosshtech
+ciscoshtech;inloop;ios::inloop
+ciscoshtech;command;ios::ShowVersion;show version
+ciscoshtech;command;ios::ShowRedundancy;show redundancy secondary
+ciscoshtech;command;ios::ShowIDprom;show idprom backplane
+ciscoshtech;command;ios::ShowInstallActive;show install active
+ciscoshtech;command;ios::ShowEnv;show env all
+ciscoshtech;command;ios::ShowRSP;show rsp chassis-info
+ciscoshtech;command;ios::ShowGSR;show gsr chassis
+ciscoshtech;command;ios::ShowGSR;show diag chassis-info
+ciscoshtech;command;ios::ShowBoot;show boot
+ciscoshtech;command;ios::ShowBoot;show bootvar
+ciscoshtech;command;ios::ShowBoot;show variables boot
+ciscoshtech;command;ios::ShowLicense;show license udi
+ciscoshtech;command;ios::ShowLicense;show license feature
+ciscoshtech;command;ios::ShowLicense;show license
+ciscoshtech;command;ios::ShowLicense;show license summary
+ciscoshtech;command;ios::ShowFlash;show flash:
+ciscoshtech;command;ios::DirSlotN;dir /all nvram:
+ciscoshtech;command;ios::DirSlotN;dir /all bootflash:
+ciscoshtech;command;ios::DirSlotN;dir /all slot0:
+ciscoshtech;command;ios::DirSlotN;dir /all disk0:
+ciscoshtech;command;ios::DirSlotN;dir /all slot1:
+ciscoshtech;command;ios::DirSlotN;dir /all disk1:
+ciscoshtech;command;ios::DirSlotN;dir /all slot2:
+ciscoshtech;command;ios::DirSlotN;dir /all disk2:
+ciscoshtech;command;ios::DirSlotN;dir /all harddisk:
+ciscoshtech;command;ios::DirSlotN;dir /all harddiska:
+ciscoshtech;command;ios::DirSlotN;dir /all harddiskb:
+ciscoshtech;command;ios::DirSlotN;dir /all sup-bootdisk:;c6500 sup32
+ciscoshtech;command;ios::DirSlotN;dir /all sup-bootflash:;c6500 ios
+ciscoshtech;command;ios::DirSlotN;dir /all sup-microcode:;c6500 ios
+ciscoshtech;command;ios::DirSlotN;dir /all slavenvram:
+ciscoshtech;command;ios::DirSlotN;dir /all slavebootflash:
+ciscoshtech;command;ios::DirSlotN;dir /all slaveslot0:
+ciscoshtech;command;ios::DirSlotN;dir /all slavedisk0:
+ciscoshtech;command;ios::DirSlotN;dir /all slaveslot1:
+ciscoshtech;command;ios::DirSlotN;dir /all slavedisk1:
+ciscoshtech;command;ios::DirSlotN;dir /all slaveslot2:
+ciscoshtech;command;ios::DirSlotN;dir /all slavedisk2:
+ciscoshtech;command;ios::DirSlotN;dir /all slavesup-bootflash:;c7600
+ciscoshtech;command;ios::DirSlotN;dir /all sec-nvram:
+ciscoshtech;command;ios::DirSlotN;dir /all sec-bootflash:
+ciscoshtech;command;ios::DirSlotN;dir /all sec-slot0:
+ciscoshtech;command;ios::DirSlotN;dir /all sec-disk0:
+ciscoshtech;command;ios::DirSlotN;dir /all sec-slot1:
+ciscoshtech;command;ios::DirSlotN;dir /all sec-disk1:
+ciscoshtech;command;ios::DirSlotN;dir /all sec-slot2:
+ciscoshtech;command;ios::DirSlotN;dir /all sec-disk2:
+ciscoshtech;command;ios::ShowContAll;show controllers
+ciscoshtech;command;ios::ShowContCbus;show controllers cbus
+ciscoshtech;command;ios::ShowDiagbus;show diagbus
+ciscoshtech;command;ios::ShowDiag;show diag
+ciscoshtech;command;ios::ShowModule;show module;c6500 ios
+ciscoshtech;command;ios::ShowSpeVersion;show spe version
+ciscoshtech;command;ios::ShowC7200;show c7200
+ciscoshtech;command;ios::ShowCellular;show cellular 0 profile;Cellular modem
+ciscoshtech;command;ios::ShowInventory;show inventory raw
+ciscoshtech;command;ios::ShowVTP;show vtp status
+ciscoshtech;command;ios::ShowVLAN;show vlan
+ciscoshtech;command;ios::ShowVLAN;show vlan-switch
+ciscoshtech;command;ios::ShowDetail;show switch detail
+ciscoshtech;command;ios::ShowSDM;show sdm prefer
+ciscoshtech;command;ios::ShowMTU;show system mtu
+ciscoshtech;command;ios::ShowDebug;show debug
+ciscoshtech;command;iosshtech::WriteTerm;show tech-support
+#
